use latest custom stack approach, fix demo project and IT